# catfish

./: .gitconfig  .gitignore  Makefile.am  README  README.md  configure.ac
doc/manual/: catfish.tex
examples/: input.sgr
lib/graph/src/: directed_graph.cc  directed_graph.h  draw.cc  draw.h  edge_base.cc  edge_base.h  graph_base.cc  graph_base.h  undirected_graph.cc  undirected_graph.h  vertex_base.cc  vertex_base.h
lib/gtf/src/: gene.cc  gene.h  genome.cc  genome.h  genome1.cc  genome1.h  item.cc  item.h  transcript.cc  transcript.h
lib/util/src/: util.cc  util.h
src/: .gitignore  Makefile.am  catfish.cc  catfish.h  config.cc  configure.ac  edge_info.cc  equation.cc  gtf.cc  interval_map.cc  interval_map.h  main.cc  nested_graph.cc  sgraph_compare.h  vertex_info.cc
src/src/: Makefile.am  assembler.cc  assembler.h  catfish.cc  catfish.h  config.cc  config.h  edge_info.cc  edge_info.h  equation.h  gtf.cc  gtf.h  main.cc  nested_graph.h  path.cc  path.h  sgraph_compare.cc  splice_graph.cc  splice_graph.h  subsetsum.cc  subsetsum.h  vertex_info.cc  vertex_info.h
